Can build complete test jar for indigo-examples.