@@ -19,6 +19,26 @@ repositories {
   jcenter()
 }
 
+task testJar(type: Jar) {
+  dependsOn jar
+  from sourceSets.main.output
+  from sourceSets.test.output
+  from { // bundle all dependencies
+    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
+    configurations.testCompile.collect { it.isDirectory() ? it : zipTree(it) }
+  }   
+  baseName 'indigo-examples-test'
+}
+
+def perfJvmArgs = '-server -XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -Xms1G -Xmx4G -Xss1M -XX:+UseParallelGC'
+
+task wsBench(type: JavaExec) {
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  jvmArgs = Arrays.asList perfJvmArgs.split(' ')
+  main = 'com.obsidiandynamics.indigo.util.BashInteractor'
+}
+
 dependencies {
   compile project(':')
   compile 'com.amazonaws:aws-java-sdk-dynamodb'
@@ -28,8 +48,8 @@ dependencies {
   compile 'com.owlike:genson:1.4'
   compile 'org.eclipse.jetty.websocket:websocket-server:9.4.5.v20170502'
   compile 'org.eclipse.jetty.websocket:websocket-client:9.4.5.v20170502'
-  compile 'io.undertow:undertow-core:1.4.12.Final'
-  compile 'io.undertow:undertow-websockets-jsr:1.4.12.Final'
+  compile 'io.undertow:undertow-core:1.4.15.Final'
+  compile 'io.undertow:undertow-websockets-jsr:1.4.15.Final'
   compile 'io.netty:netty-all:4.1.11.Final'
   compile 'org.slf4j:slf4j-api:1.7.6'
 
